--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wiersz o miłości</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i|Source+Sans+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="splash"
+            <div class="splash-inner">
+                <h1 class="page-title">Miłość szczęśliwa</h1>
+                <h2 class="page-subtitle">Wisława Szymborska</h2>
+            </div>
+        </header>
     
 </body>
 </html>
