--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="splash"
             <div class="splash-inner">
-                <h1 class="page-title">Miłość szczęśliwa</h1>
+                <h1 class="page-title">Miłość szczęśliwa. Aż za.</h1>
                 <h2 class="page-subtitle">Wisława Szymborska</h2>
             </div>
         </header>
