--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="splash"
             <div class="splash-inner">
                 <h1 class="page-title">Miłość szczęśliwa. Aż za.</h1>
-                <h2 class="page-subtitle">Wisława Szymborska</h2>
+                <h2 class="page-subtitle">Wisława Szymborska - polska poetka, eseistka, krytyk, tłumaczka, felietonistka.</h2>
             </div>
         </header>
         <section class="about">
