--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <br>Jakim jeżykiem mówią - zrozumiałym na pozór.<br>
                 <br>A te ich ceremonie, ceregiele,<br>
                 <br>wymyślne obowiązki względem siebie -<br>
-                <br>wygląda to na zmowę za plecami ludzkości!<br></p>
+                <br>wygląda to na zmowę za plecami ludzkości!<br>
+                <br>cdn ...<br></p>
                 
             </div>
         </section>
